# Blink-hash

./: Makefile  README.md
adms/: genzipf.c  genzipf.h  inversions.c  inversions.h  scramble.c  scramble.h
include/: index.h  indexkey.h  microbench.h  options.h  perf_event.h  util.h
index/ARTOLC/: N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
index/ARTROWEX/: Epoche.h  N.cpp  N.h  N16.cpp  N256.cpp  N4.cpp  N48.cpp  Tree.cpp  Tree.h
index/BTreeOLC/: BTreeOLC_adjacent_layout.h  BTreeOLC_child_layout.h
index/BwTree/: bloom_filter.h  bwtree.h
index/b-epsilon-tree/: CMakeLists.txt
index/b-epsilon-tree/lib/: CMakeLists.txt  buffer.h  common.h  node.h  run.cpp  run.h  tree.cpp  tree.h  tree_optimized.h  tree_optimized2.h
index/b-epsilon-tree/test/: CMakeLists.txt  range.cpp  rdtsc.cpp  test.cpp
index/blink/: Makefile  node.h  node_optimized.h  range.cpp  rdtsc.cpp  test.cpp  timestamp.cpp  tree.h  tree_optimized.h
index/blink-append/: Makefile  bitmap.h  node.h  test.cpp  tree.h
index/blink-bitmap/: Makefile  node.h  test.cpp  tree.h  tree_breakdown.h
index/blink-buffer-batch/: CMakeLists.txt
index/blink-buffer-batch/lib/: CMakeLists.txt  bucket.h  entry.h  hash.cpp  hash.h  node.h  run.h  table.h  tree.h
index/blink-buffer-batch/test/: CMakeLists.txt  run_test.cpp  run_timestamp.cpp  test.cpp  timestamp.cpp
index/blink-buffer/lib/: CMakeLists.txt  bucket.h  entry.h  hash.cpp  hash.h  node.h  run.h  table.h  tree.h
index/blink-buffer/test/: CMakeLists.txt  range.cpp  run_test.cpp  run_timestamp.cpp  test.cpp  timestamp.cpp
index/blink-hash/: CMakeLists.txt  Makefile  bucket.h  entry.h  linked_node.h  linked_node2.h  linked_node_spinlock.h  node.h  range.cpp  rdtsc.cpp  run.sh  test.cpp  threadinfo.h  tree.h
index/blink-hash-str/: CMakeLists.txt
index/blink-hash-str/lib/: CMakeLists.txt  Epoche.cpp  bucket.h  common.h  entry.h  hash.cpp  hash.h  inode.cpp  inode.h  lnode.cpp  lnode.h  lnode_btree.cpp  lnode_hash.cpp  node.h  tree.cpp  tree.h
index/blink-hash-str/src/: CMakeLists.txt  wrapper.cpp  wrapper.h
index/blink-hash/lib/: CMakeLists.txt  Epoche.h  bucket.h  common.h  hash.cpp  hash.h  inode.cpp  inode.h  lnode.cpp  lnode.h  lnode_btree.cpp  lnode_hash.cpp  node.h  tree.cpp  tree.h
index/blink-hash/src/: CMakeLists.txt  bucket.h  hash.cpp  inode.cpp  inode.h  lnode.cpp  lnode.h  lnode_btree.cpp  lnode_hash.cpp  node.h  tree.cpp  tree.h
index/blink-hash/test/: CMakeLists.txt  insert_left.cpp  insert_middle.cpp  mixed.cpp  range.cpp  rdtsc.cpp  sensor.cpp  test.cpp  timestamp.cpp
index/blink-hashed/: Makefile  atomic_node.h  bucket.h  entry.h  error.out  finger_node.h  hash.h  leaf_size.sh  linked_node.h  node.h  node2.h  node_breakdown.h  preallocator.h  rdtsc.cpp  run.sh  spinlock.h  test.cpp  tree.h
index/hot/: CMakeLists.txt
index/hot/lib/hot/commons/include/hot/commons/: Algorithms.hpp  SparsePartialKeys.hpp
index/hot/lib/hot/rowex/: CMakeLists.txt
index/hot/lib/hot/rowex/include/hot/rowex/: HOTRowex.hpp  HOTRowexInterface.hpp  HOTRowexIterator.hpp  HOTRowexNodeBaseInterface.hpp
index/hot/src/: CMakeLists.txt  key.h  wrapper.cpp  wrapper.h
index/libcuckoo/libcuckoo/: cuckoohash_map.hh
index/masstree/: GNUmakefile  GNUmakefile.in  compile.sh  compiler.hh  config.h  config.h.in  config.status  configure  masstree.hh  masstree_get.hh  masstree_insert.hh  masstree_remove.hh  masstree_scan.hh  masstree_split.hh  masstree_struct.hh  mtIndexAPI.cc  mtIndexAPI.hh  mtclient  test_atomics
index/masstree/autom4te.cache/: output.0  requests  traces.0  traces.1
microbench/: Makefile  amduprof_arr.cpp  amduprof_test.cpp  atomic_load.cpp  cas_test.cpp  fetch_add.cpp  getchar.cpp  likwid_test.cpp  malloc.cpp  median.cpp  mem_location_test.cpp  memcpy.cpp  mutex_node.h  node.h  node_test.cpp  papi_test.cpp  test.cpp
scripts/: _parse_output.cpp  adms.sh  amduprof_cache.sh  amduprof_mem.sh  blinkhash_nodesize.sh  blinkhash_split.sh  breakdown.sh  conversion_latency.sh  footprint.sh  generate_all_workloads.sh  install.sh  latency.sh  memory_bandwidth.sh  microbench.sh  motivation.sh  parse_output.cpp  parse_output.sh  perf.sh  run.sh  run_all.sh  skewed.sh  throughput.sh  throughput_out-of-ordered.sh
src/: adms.cpp  microbench.cpp  papi_util.cpp  timeseries.cpp  workload.cpp  workload_string.cpp  workload_url.cpp
workloads/: debug_unique_test.cpp  extract_email.cpp  gen_workload.py  parse_email.cpp  parse_url.cpp  workload_config.inp
workloads/workload_spec/: workload_mixed  workloada  workloadb  workloadc  workloadd  workloade
